k8s/rq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rq
  namespace: statuspage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rq
  template:
    metadata:
      labels:
        app: rq
    spec:
      imagePullSecrets:
        - name: ecr-cred
      containers:
        - name: rq
          image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/msdw/statuspage-rq:latest
          command: ["python3", "statuspage/manage.py", "rqworker", "default"]
