k8s/deployweb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: statuspage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      imagePullSecrets:
        - name: ecr-cred
      containers:
        - name: web
          image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/msdw/statuspage-web:latest
          command: ["python3", "statuspage/manage.py", "runserver", "0.0.0.0:8000", "--insecure"]
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: statuspage
spec:
  type: ClusterIP
  ports:
    - port: 8000      
      targetPort: 8000 
  selector:
    app: web
